fixed ussue with content shifting, size of images, back to top button

--- a/src/styles/blocks/back_to_top.scss
+++ b/src/styles/blocks/back_to_top.scss
@@ -2,7 +2,9 @@
   position: fixed;
   right: 65px;
   bottom: 35px;
-  transition: transform $transitionDuration;
+  opacity: 0.3;
+  transition: $transitionDuration;
+  transition-property: transform opacity;
 
   @include onTablet {
     right: 10px;
@@ -15,6 +17,11 @@
   }
 }
 
+.back-to-top:hover {
+  transform: scale(1.2);
+  opacity: 1;
+}
+
 .on_top {
   transition: transform $transitionDuration;
 
@@ -25,8 +32,4 @@
   @include onMobile {
     width: 25px;
   }
-}
-
-.on_top:hover {
-  transform: scale(1.2);
 }
