--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -131,6 +131,11 @@
     grid-row: 4;
     z-index: -1;
 
+    @media (max-width: 1060px) {
+      width: 500px;
+      height: 350px;
+    }
+
     @include onTablet {
       grid-column: 3/11;
       grid-row: 9;
