--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -65,15 +65,21 @@
     grid-row: 1;
     z-index: -1;
 
+    @media (max-width: 1060px) {
+      width: 390px;
+      height: 200px;
+      margin-top: 60px;
+    }
+
     @include onTablet {
       padding-left: 100px;
       width: 600px;
-      height: 280px;
+      height: 235px;
     }
 
     @media (max-width: 590px) {
       width: 450px;
-      height: 200px;
+      height: 180px;
     }
 
     @include onMobile {
